<resources>
    <string name="app_name">TestMobile</string>
    <string name="action_categories">Categories</string>

    <string name="label_seats">(*) Seats:</string>
    <string name="label_price">(*) Price:</string>
    <string name="label_New">New:</string>
    <string name="label_model">(*) Model:</string>
    <string name="label_date_released">(*) Date released:</string>
    <string name="label_category">Category:</string>
    <string name="failure_network_connection">An network error ocurred verify your connection</string>
    <string name="data_base_error">We can not get the data from the data base try again</string>
    <string name="failure_server_error">a Server error ocurred sorry try again</string>
    <string name="car_information">Car Information</string>
    <string name="label_extra_inf">Extra Information:</string>
    <string name="format_date">mm/dd/yyyy</string>
    <string name="delete_question">Are you sure to delete the car?</string>
    <string name="delete_question_category">Are you sure to delete the category?</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_category">Add Category</string>

    <string name="title_cars">Cars</string>
    <string name="title_car">Car</string>
    <string name="title_category">Categories</string>
</resources>